--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
     "react-icons": "^3.0.0",
     "react-scripts": "4.0.3",
     "typescript": "^3.9.5",
+    "web-midi-hooks": "^1.0.3",
     "web-vitals": "^0.2.2"
+  },
+  "devDependencies": {
+    "patch-package": "^6.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "patch-package"
   },
   "eslintConfig": {
     "extends": "react-app"
