--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "framer-motion": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^3.0.0",
@@ -23,6 +24,7 @@
     "web-vitals": "^0.2.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.172",
     "patch-package": "^6.4.7"
   },
   "scripts": {
